# UnrealTagAutoCreate

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
cmake/: CompilerWarnings.cmake  Dependencies.cmake  Toolchain.cmake
source/: tag_read_print.cpp  tag_read_print.h
